website/static/website/css/project.css
.content-container h1, h2, h3, h4, h5, h6 {
  font-family: 'Montserrat', sans-serif;
  color: #0a0a0a;
  font-weight: 700;
}

.content-container h2 {
  font-size: 20px;
}

.content-container h3 {
  font-size: 14px;
}

.content-container p {
  margin-bottom: 20px;
}

.content-container body {
  font-family: 'Roboto', sans-serif;
  font-size: 14px;
  line-height: 1.5;
}

.row-adjust-margins{
  margin-left: 0px;
  margin-right: 0px;
}

.project-description {
  font-family: 'Roboto', sans-serif;
  font-size: 15px;
  line-height: 2;
  font-weight: 400;
  color: rgb(122, 122, 122);
}

.project-content-row {
  width: 100%;
}

@media (min-width: 768px) {
  .project-content-row {
    width: 90%;
  }
}

.pub-row-vert-layout {
  margin-left: 0px;
}

/* FEATURED VIDEO */
.video-wrapper {
  position: relative;
  overflow: hidden;
  padding-top: 56.25%;
}

.video-iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* SIDEBAR CSS */
.sidebar-header{
  margin-top: 30px;
  margin-bottom: 6px;
}

.sidebar-ul{
  list-style-type: none;
  padding-left: 0;
  margin-left: 0;
}

.sidebar-ul li{
  display: flex;
  align-items: center;
  margin-bottom: 10px;
  flex-wrap: nowrap;
}

.sidebar-person-thumbnail{
  width: 30px;
  height: 30px;
  border-radius: 50%;
}

.sidebar-content{
  margin-left: 6px;
}

.sidebar-date{
  font-size: smaller;
  color: rgb(150,150,150);
}

.related-project-thumbnail{
  width: 80px;
  border-radius: 10%;
}

.sidebar-related-project-date{
  font-size: smaller;
  color: rgb(150,150,150);
}

